<resources>
    <string name="app_name">复利计算</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">关于</string>
    <string name="str_app_version">版本:%1$s</string>
    <string name="str_tech_support">技术支持:czhao5956@gmail.com</string>

    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>

    <string name="txtStartDate">借款开始日期：</string>
    <string name="hintStartDate">请选择借款开始日期</string>
    <string name="txtOughtDate">应还息日期：</string>
    <string name="hintOughtDate">请选择应还息日期</string>
    <string name="txtActualDate">实际还息日期：</string>
    <string name="hintActualDate">请选择实际还息日期</string>
    <string name="txtAmount">借款金额：</string>
    <string name="hintAmount">请输入借款金额</string>
    <string name="txtAnnualRate">年利率(%)：</string>
    <string name="hintAnnualRate">请输入年利率</string>
    <string name="txtPunishDayRate">罚息日利率(%)：</string>
    <string name="hintPunishDayRate">请输入罚息日利率</string>
    <string name="txtCalc">计算</string>
    <string name="calcResult">计算结果</string>
    <string name="txtCalcResult">总利息：%1$.2f元</string>
    <string name="remark">注：日利率=年利率/360，罚息日利率=1.5*年利率/360，罚息计复利。</string>
</resources>
